--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <script type="module" src="./firebase.js"></script>
   <script type="module" src="./app.js"></script>
+  <script type="module" src="./donate.js"></script>
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css" />
