--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="hero-img" id="Hero3"></div>
           <div class="hero-img" id="Hero4"></div>
         </div>
-        <h1 class="main-heading">A world with plenty of smiles</h1>
+        <h1 class="main-heading">A world plentiful of smiles</h1>
       </section>
       <!-- END of HERO -->
 
