--- a/index.html
+++ b/index.html
@@ -16,15 +16,19 @@
       rel="stylesheet"
     />
 
+    <!-- JS -->
+    <script defer src="donate.js"></script>
+
     <title>Document</title>
   </head>
   <body>
+    <div class="background"></div>
     <!-- HEADER -------------------------------------------------------------->
     <header class="header">
       <nav class="main-nav">
         <div class="main-nav-list container">
           <div class="nav-donations">
-            <a class="main-nav-link">Donations</a>
+            <a class="main-nav-link">Donate</a>
           </div>
           <div class="nav-home">
             <a href="#">
@@ -42,7 +46,6 @@
     </header>
 
     <main>
-      <div class="background-image"></div>
       <!-- HERO -------------------------------------------------------------->
       <section class="hero">
         <div class="hero-inner">
@@ -55,7 +58,49 @@
       </section>
       <!-- END of HERO -->
 
-      <section class="main-info"></section>
+      <section class="main-info">
+        <div class="container grid-2col">
+          <!-- 1 -->
+          <img
+            class="info-img"
+            alt="Person giving tomatos"
+            src="img/Donate.jpg"
+          />
+          <div class="info-div">
+            <h2 class="info-header">Browse charities</h2>
+            <p class="info-p">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi
+              ducimus velit quisquam corporis tenetur voluptate impedit!
+            </p>
+          </div>
+          <!-- 2 -->
+          <div class="info-div">
+            <h2 class="info-header">Donate</h2>
+            <p class="info-p">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi
+              ducimus velit quisquam corporis tenetur voluptate impedit!
+            </p>
+          </div>
+          <img
+            class="info-img"
+            alt="Person giving tomatos"
+            src="img/Donate.jpg"
+          />
+          <!-- 3 -->
+          <img
+            class="info-img"
+            alt="Person giving tomatos"
+            src="img/Donate.jpg"
+          />
+          <div class="info-div">
+            <h2 class="info-header">See the impact you've made!</h2>
+            <p class="info-p">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi
+              ducimus velit quisquam corporis tenetur voluptate impedit!
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
