--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </a>
           </div>
           <div class="nav-pls">
-            <a class="main-nav-link">Profile</a>
+            <a class="main-nav-link" href="profile.html">Profile</a>
             <a class="main-nav-link">Login</a>
             <a class="main-nav-link nav-cta">Sign up</a>
           </div>
