update footer and logo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
 
@@ -31,8 +35,8 @@
             <a class="main-nav-link">Donate</a>
           </div>
           <div class="nav-home">
-            <a href="#">
-              <img class="logo" alt="Logo" src="." />
+            <a href="index.html">
+              <img class="logo" alt="Logo" src="img/Lilac_Logo.png" />
             </a>
           </div>
           <div class="nav-pls">
@@ -102,5 +106,77 @@
         </div>
       </section>
     </main>
+
+    <!-- FOOTER -------------------------------------------------------------->
+    <footer class="footer">
+      <div class="container grid-footer">
+        <div class="logo-col">
+          <a href="index.html" class="footer-logo">
+            <img class="logo" alt="Lilic logo" src="img/Lilac_Logo.png" />
+          </a>
+
+          <ul class="social-links">
+            <li>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-instagram"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-facebook"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-twitter"></ion-icon
+              ></a>
+            </li>
+          </ul>
+
+          <div class="legal">
+            <a href="">Legal</a> | <a href="">Contact us</a>
+          </div>
+        </div>
+        <div class="address-col">
+          <p class="footer-heading">Contact us</p>
+          <address class="contacts">
+            <p class="address">
+              Abc Defghijk. 12345 hi hello, <br> Calgary, AB Canada. 
+            </p>
+            <a class="footer-link" href="tel:415-201-6370">123-456-7890</a><br />
+            <a class="footer-link" href="mailto:hello@omnifood.com"
+              >info@lilac.com</a
+            >
+          </address>
+        </div>
+
+        <div class="nav-col">
+          <p class="footer-heading">Home</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Create account</a></li>
+            <li><a class="footer-link" href="#">Sign in</a></li>
+            <li><a class="footer-link" href="#">Research and reports</a></li>
+            <li><a class="footer-link" href="#">Take action</a></li>
+          </ul>
+        </div>
+        <div class="nav-col">
+          <p class="footer-heading">About</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">FAQ</a></li>
+            <li><a class="footer-link" href="#">Partner with Lilac</a></li>
+            <li><a class="footer-link" href="#">Work with Lilac</a></li>
+            <li><a class="footer-link" href="#">Goals</a></li>
+          </ul>
+        </div>
+        <div class="nav-col">
+          <p class="footer-heading">Resources</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="https://unsplash.com/">Unsplash</a></li>
+            <li><a class="footer-link" href="#">Help center</a></li>
+            <li><a class="footer-link" href="#">Privacy & terms</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
