change page title

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script defer type="module" src="app.js"></script>
   <script defer type="module" src="donate.js"></script>
 
-  <title>Document</title>
+  <title>Lilac - Home</title>
 </head>
 
 <body>
