--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav class="main-nav">
       <div class="main-nav-list container">
         <div class="nav-donations">
-          <a class="main-nav-link">Donate</a>
+          <a class="main-nav-link" href="donate.html">Donate</a>
         </div>
         <div class="nav-home">
           <a href="index.html">
