--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
   <script defer type="module" src="app.js"></script>
   <script defer type="module" src="donate.js"></script>
 
+      <!-- ICONS -->
+      <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+
   <title>Lilac - Home</title>
 </head>
 
