fix navigation centering issue

--- a/account.html
+++ b/account.html
@@ -21,6 +21,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/account.css" />
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -73,60 +74,12 @@
     </header>
 
     <main>
-      <!-- HERO -------------------------------------------------------------->
-      <section class="hero">
-        <div class="hero-inner">
-          <div class="hero-img" id="Hero1"></div>
-          <div class="hero-img" id="Hero2"></div>
-          <div class="hero-img" id="Hero3"></div>
-          <div class="hero-img" id="Hero4"></div>
-        </div>
-        <h1 class="main-heading">A world plentiful of smiles</h1>
-      </section>
-      <!-- END of HERO -->
+        <section class="account">
 
-      <section class="main-info">
-        <div class="container grid-2col">
-          <!-- 1 -->
-          <img
-            class="info-img"
-            alt="Person giving tomatos"
-            src="img/Donate.jpg"
-          />
-          <div class="info-div">
-            <h2 class="info-header">Browse charities</h2>
-            <p class="info-p">
-              Search the catalog containing thousands of trusted charities Lilac has
-              partnered up with.
-            </p>
-          </div>
-          <!-- 2 -->
-          <div class="info-div">
-            <h2 class="info-header">Donate</h2>
-            <p class="info-p">
-              Help create smiles around the world! <br />Don't worry, we don't
-              take any cuts. <br />100% of your donation goes to the charities.
-            </p>
-          </div>
-          <img
-            class="info-img"
-            alt="Person giving tomatos"
-            src="img/Donate.jpg"
-          />
-          <!-- 3 -->
-          <img
-            class="info-img"
-            alt="Person giving tomatos"
-            src="img/Donate.jpg"
-          />
-          <div class="info-div">
-            <h2 class="info-header">See the impact you've made!</h2>
-            <p class="info-p">
-              Get personal messages directly from the people you have helped.
-            </p>
-          </div>
-        </div>
-      </section>
+            <h1 class="account-heading">Account</h1>
+        </section>
+
+
     </main>
 
     <!-- FOOTER -------------------------------------------------------------->
