--- a/account.html
+++ b/account.html
@@ -74,8 +74,7 @@
     </header>
 
     <main>
-        <section class="account">
-
+        <section class="container account">
             <h1 class="account-heading">Account</h1>
         </section>
 
