updated profile page menu header

--- a/profile.html
+++ b/profile.html
@@ -27,17 +27,16 @@
             <nav class="main-nav">
               <div class="main-nav-list container">
                 <div class="nav-donations">
-                  <a class="main-nav-link">Donations</a>
+                    <a class="main-nav-link" href="donate.html">Donate</a>
                 </div>
                 <div class="nav-home">
                   <a href="#">
-                    <img class="logo" alt="Logo" src="." />
+                    <img class="logo" alt="Logo" src="img/Lilac_Logo.png" />
                   </a>
                 </div>
                 <div class="nav-pls">
                   <a class="main-nav-link" href="profile.html">Profile</a>
-                  <a class="main-nav-link">Login</a>
-                  <a class="main-nav-link nav-cta">Sign up</a>
+                  <a class="main-nav-link nav-cta sign-in-out">Sign in</a>
                 </div>
               </div>
             </nav>
