fixed one menu thing on profile

--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
                     <a class="main-nav-link" href="donate.html">Donate</a>
                 </div>
                 <div class="nav-home">
-                  <a href="#">
+                  <a href="index.html">
                     <img class="logo" alt="Logo" src="img/Lilac_Logo.png" />
                   </a>
                 </div>
