--- a/account.html
+++ b/account.html
@@ -76,6 +76,9 @@
     <main>
         <section class="container account">
             <h1 class="account-heading">Account</h1>
+            <h2 class="heading-secondary">Basics</h2>
+            <h2 class="heading-secondary">Payment Methods</h2>
+            <h2 class="heading-secondary">History</h2>
         </section>
 
 
@@ -155,6 +158,10 @@
           </ul>
         </div>
       </div>
+
+      <h2 class="made-by">
+        This website is made by Danny Duong, Joshua Walters, Kaito Sugimura as a Hack the Change 2022 Hackathon Project. 
+      </h2>
     </footer>
   </body>
 </html>
