--- a/donate.html
+++ b/donate.html
@@ -138,6 +138,10 @@
         </ul>
       </div>
     </div>
+
+    <h2 class="made-by">
+      This website is made by Danny Duong, Joshua Walters, Kaito Sugimura as a Hack the Change 2022 Hackathon Project. 
+    </h2>
   </footer>
 </body>
 
