--- a/index.html
+++ b/index.html
@@ -203,6 +203,11 @@
           </ul>
         </div>
       </div>
+
+      
+        <h2 class="made-by">
+          This website is made by Danny Duong, Joshua Walters, Kaito Sugimura as a Hack the Change 2022 Hackathon Project. 
+        </h2>
     </footer>
   </body>
 </html>
