--- a/donate.html
+++ b/donate.html
@@ -140,7 +140,7 @@
     </div>
 
     <h2 class="made-by">
-      This website is made by Danny Duong, Joshua Walters, Kaito Sugimura as a Hack the Change 2022 Hackathon Project. 
+      This website is made by Danny Duong, Joshua Walters, and Kaito Sugimura as a Hack the Change 2022 Hackathon Project. 
     </h2>
   </footer>
 </body>
