Change nav appearance

--- a/donate.html
+++ b/donate.html
@@ -46,6 +46,7 @@
           </a>
         </div>
         <div class="nav-pls">
+          <a class="main-nav-link" href="account.html">Account</a>
           <a class="main-nav-link" href="profile.html">Profile</a>
           <a class="main-nav-link nav-cta sign-in-out">Sign in</a>
         </div>
