--- a/profile.html
+++ b/profile.html
@@ -35,7 +35,8 @@
                   </a>
                 </div>
                 <div class="nav-pls">
-                  <a class="main-nav-link" href="profile.html">Profile</a>
+                  <a class="main-nav-link" href="account.html">Account</a>
+                  <a class="main-nav-link">Profile</a>
                   <a class="main-nav-link nav-cta sign-in-out">Sign in</a>
                 </div>
               </div>
