idk what im doing

--- a/account.html
+++ b/account.html
@@ -34,7 +34,7 @@
     <!-- JS -->
     <script defer type="module" src="firebase.js"></script>
     <script defer type="module" src="app.js"></script>
-    <script defer type="module" src="donate.js"></script>
+    <script defer type="module" src="account.js"></script>
 
     <!-- ICONS -->
     <script
@@ -77,8 +77,15 @@
         <section class="container account">
             <h1 class="account-heading">Account</h1>
             <h2 class="heading-secondary">Basics</h2>
+
+            <h3 class="heading-tertiary">Name</h3>
+            <div id="NAME"></div>
+            <h3 class="heading-tertiary">Email</h3>
+            <div id="EMAIL"></div>
             <h2 class="heading-secondary">Payment Methods</h2>
+            <button>Add payment method</button>
             <h2 class="heading-secondary">History</h2>
+            <div id="HISTORY"></div>
         </section>
 
 
