--- a/donate.html
+++ b/donate.html
@@ -65,6 +65,9 @@
       </button>
     </section>
 
+    <div class="No-donations-found">No organizations match your requirements</div>
+    <div class="loading-message">Loading...</div>
+
     <div class="charities"></div>
   </main>
 
