--- a/account.html
+++ b/account.html
@@ -74,21 +74,38 @@
     </header>
 
     <main>
-        <section class="container account">
-            <h1 class="account-heading">Account</h1>
-            <h2 class="heading-secondary">Basics</h2>
+      <section class="container account">
+        <h1 class="account-heading">Account</h1>
 
-            <h3 class="heading-tertiary">Name</h3>
-            <div id="NAME"></div>
-            <h3 class="heading-tertiary">Email</h3>
-            <div id="EMAIL"></div>
-            <h2 class="heading-secondary">Payment Methods</h2>
-            <button>Add payment method</button>
-            <h2 class="heading-secondary">History</h2>
-            <div id="HISTORY"></div>
-        </section>
+        <h2 class="heading-secondary">Basics</h2>
+        <div class="basics-container">
+          <div class="basics">
+            <div class="basics-flex">
+              <h3 class="heading-tertiary basics-name">Name:</h3>
+              <div id="NAME">Kaito Sugimura</div>
+            </div>
 
+            <div class="basics-flex">
+              <h3 class="heading-tertiary basics-email">Email:</h3>
+              <div id="EMAIL">Sugimurakaito@gmail.com</div>
+            </div>
+          </div>
+        </div>
 
+        <h2 class="heading-secondary">Payment Methods</h2>
+        <button>Add payment method</button>
+        <h2 class="heading-secondary">History</h2>
+        <div id="HISTORY">
+          <ul>
+            <li>
+              <span class="donation-name">UNICEF USA</span> - $<span
+                class="donation-amount"
+                >10</span
+              >
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <!-- FOOTER -------------------------------------------------------------->
@@ -167,7 +184,8 @@
       </div>
 
       <h2 class="made-by">
-        This website is made by Danny Duong, Joshua Walters, and Kaito Sugimura as a Hack the Change 2022 Hackathon Project. 
+        This website is made by Danny Duong, Joshua Walters, and Kaito Sugimura
+        as a Hack the Change 2022 Hackathon Project.
       </h2>
     </footer>
   </body>
