added comment adding system

--- a/profile.html
+++ b/profile.html
@@ -47,9 +47,10 @@
         <div class="canvas">
             <div class="profile">
                 <div class="profileimage"><img src="images/capybara.png" alt=""></div>
-                
             </div>
             <img src="images/meadow.jpg" alt="">
+            <div class="commentContainer">
+            </div>
             <div class="animalContainer"></div>
             
         </div>
