--- a/account.html
+++ b/account.html
@@ -110,8 +110,28 @@
                 <span class="donation-name">UNICEF USA</span>
               </li>
               <li>
-                $<span class="donation-amount">10</span> -
+                $<span class="donation-amount">25</span> -
+                <span class="donation-name">Animal Welfare Institute</span>
+              </li>
+              <li>
+                $<span class="donation-amount">15</span> -
+                <span class="donation-name">Pine Tree Society</span>
+              </li>
+              <li>
+                $<span class="donation-amount">5</span> -
+                <span class="donation-name">Canary Foundation</span>
+              </li>
+              <li>
+                $<span class="donation-amount">6</span> -
+                <span class="donation-name">World Animal Protection</span>
+              </li>
+              <li>
+                $<span class="donation-amount">7</span> -
                 <span class="donation-name">UNICEF USA</span>
+              </li>
+              <li>
+                $<span class="donation-amount">11</span> -
+                <span class="donation-name">The Jackson Laboratory</span>
               </li>
             </ul>
           </div>
