--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
           <!-- 1 -->
           <img
             class="info-img"
-            alt="Person giving tomatos"
-            src="img/Donate.jpg"
+            alt="Person browsing the internet"
+            src="img/Browse.jpg"
           />
           <div class="info-div">
             <h2 class="info-header">Browse charities</h2>
@@ -115,8 +115,8 @@
           <!-- 3 -->
           <img
             class="info-img"
-            alt="Person giving tomatos"
-            src="img/Donate.jpg"
+            alt="Charity in action"
+            src="img/Impact.jpg"
           />
           <div class="info-div">
             <h2 class="info-header">See the impact you've made!</h2>
