Fix profile title and icon

--- a/profile.html
+++ b/profile.html
@@ -1,59 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>profile</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/profilestyle.css" />
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png" />
 
-    <!-- Google Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap"
-        rel="stylesheet"
-    />
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/profilestyle.css" />
 
-    <!-- Scripts -->
-    <script src="profile.js" defer></script>
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet" />
+
+  <!-- Scripts -->
+  <script src="profile.js" defer></script>
+
+  <title>Lilac - Profile</title>
 </head>
+
 <body>
-        <!-- HEADER -------------------------------------------------------------->
-        <header class="header">
-            <nav class="main-nav">
-              <div class="main-nav-list container">
-                <div class="nav-donations">
-                    <a class="main-nav-link" href="donate.html">Donate</a>
-                </div>
-                <div class="nav-home">
-                  <a href="index.html">
-                    <img class="logo" alt="Logo" src="img/Lilac_Logo.png" />
-                  </a>
-                </div>
-                <div class="nav-pls">
-                  <a class="main-nav-link" href="account.html">Account</a>
-                  <a class="main-nav-link">Profile</a>
-                  <a class="main-nav-link nav-cta sign-in-out">Sign in</a>
-                </div>
-              </div>
-            </nav>
-            <!-- END of HEADER -->
-          </header>
-        <!-- Profile Canvas -->
-        <div class="canvas">
-            <div class="profile">
-                <div class="profileimage"><img src="images/capybara.png" alt=""></div>
-            </div>
-            <img src="images/meadow.jpg" alt="">
-            <div class="commentContainer">
-            </div>
-            <div class="animalContainer"></div>
-            
+  <!-- HEADER -------------------------------------------------------------->
+  <header class="header">
+    <nav class="main-nav">
+      <div class="main-nav-list container">
+        <div class="nav-donations">
+          <a class="main-nav-link" href="donate.html">Donate</a>
         </div>
-    
+        <div class="nav-home">
+          <a href="index.html">
+            <img class="logo" alt="Logo" src="img/Lilac_Logo.png" />
+          </a>
+        </div>
+        <div class="nav-pls">
+          <a class="main-nav-link" href="account.html">Account</a>
+          <a class="main-nav-link">Profile</a>
+          <a class="main-nav-link nav-cta sign-in-out">Sign in</a>
+        </div>
+      </div>
+    </nav>
+    <!-- END of HEADER -->
+  </header>
+  <!-- Profile Canvas -->
+  <div class="canvas">
+    <div class="profile">
+      <div class="profileimage"><img src="images/capybara.png" alt=""></div>
+    </div>
+    <img src="images/meadow.jpg" alt="">
+    <div class="commentContainer">
+    </div>
+    <div class="animalContainer"></div>
+
+  </div>
+
 </body>
+
 </html>
